--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Culo 2020
+      Copyright &copy; Yes 2020
     </div>
   </footer>
 
