--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
@@ -77,6 +76,8 @@
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
+      <h3>Bachelor thesis</h3>
+
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
@@ -88,6 +89,51 @@
           </div>
         </div>
       </div>
+
+      <h3>Collaborations</h3>
+
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/pacpac.png" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">
+                  <a href="https://cg3hci.dmi.unica.it/pacpac/" target="_blank" class="mx-2">
+                    <i class="fab fas fa-globe"></i>
+                  </a>PAC PAC</h4>
+                <p class="mb-0 text-white-50">A web-based game engine for 2D and 3D point-and-click games. <a href="https://www.youtube.com/watch?v=lo03aaU6n00" target="_blank">See demo</a></p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-5">
+        <div class="col-lg-6">
+          <img class="img-fluid w-auto" src="img/urbagram.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">
+                  <a href="https://cg3hci.dmi.unica.it/urbagram/" target="_blank" class="mx-2">
+                    <i class="fab fas fas fa-globe"></i>
+                  </a>Urbagram</h4>
+                <p class="mb-0 text-white-50">A web application designed for the architecture festival in Cagliari, featuring a quiz game and a collaborative canvas for the visitors to create crazy instagram-like stories and share them.</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <h3>University projects</h3>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
@@ -249,6 +295,8 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
+  <script src="https://use.fontawesome.com/8cec95b56b.js"></script>
+
 
 </body>
 
