--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="mailto:r.macis@live.it">r.macis@live.it</a>
+                <a href="mailto:r.macis@live.it">Email me</a>
               </div>
             </div>
           </div>
