--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>SpellThief</h4>
-            <p class="text-black-50 mb-0">A survival horror videogame with Biofeedback integration.<br>The game changes its behaviour when the player's heart rate ramps up or slow down.</p>
+            <p class="text-black-50 mb-0">2018</p>
+            <p class="text-black-50 mb-0">A survival horror videogame with Biofeedback integration.<br>The game changes its behaviour when the player's heart rate rises or drops.</p>
           </div>
         </div>
       </div>
@@ -104,6 +105,7 @@
                   <a href="https://cg3hci.dmi.unica.it/pacpac/" target="_blank" class="mx-2">
                     <i class="fab fas fa-globe"></i>
                   </a>PAC PAC</h4>
+                  <p class="text-white-50 mb-0">2019 - 2021</p>
                 <p class="mb-0 text-white-50">A web-based game engine for 2D and 3D point-and-click games. <a href="https://www.youtube.com/watch?v=lo03aaU6n00" target="_blank">See demo</a></p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -112,7 +114,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-5">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid w-auto" src="img/urbagram.jpg" alt="">
         </div>
@@ -124,8 +126,30 @@
                   <a href="https://cg3hci.dmi.unica.it/urbagram/" target="_blank" class="mx-2">
                     <i class="fab fas fas fa-globe"></i>
                   </a>Urbagram</h4>
+                  <p class="text-white-50 mb-0">2020</p>
                 <p class="mb-0 text-white-50">A web application designed for the architecture festival in Cagliari, featuring a quiz game and a collaborative canvas for the visitors to create crazy instagram-like stories and share them.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-5">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/ECA.png" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">
+                  <a href="https://youtu.be/lQBSsNolP3w" target="_blank" class="mx-2">
+                    <i class="fab fa-youtube"></i>
+                  </a>ECARules4All</h4>
+                  <p class="text-white-50 mb-0">2021</p>
+                <p class="mb-0 text-white-50">A unity plugin for End User Development in VR using the Event-Condition-Action rule system. <a href="https://youtu.be/lQBSsNolP3w" target="_blank">See demo</a></p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
@@ -136,48 +160,7 @@
       <h3>University projects</h3>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/esp32.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">        
-					<a href="https://drive.google.com/open?id=1rZY9EKZydA1kH4Q9p-X_VtGz-5dFYRDi" target="_blank" class="mx-2">
-					<i class="fab fa-youtube"></i>
-				</a>Smart Recycle Bin</h4>
-                <p class="mb-0 text-white-50">ESP8266 IoT system for automatic waste labeling powered by Amazon Rekognition API, featuring an interactive backend with garbage log and customizable options. <a href="https://drive.google.com/open?id=1rZY9EKZydA1kH4Q9p-X_VtGz-5dFYRDi" target="_blank">See demo</a></p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/indexcontroller.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">        
-					<a href="https://github.com/a55mage/FeedBucket" target="_blank" class="mx-2">
-					<i class="fab fa-github"></i>
-				</a>FeedBucket</h4>
-                <p class="mb-0 text-white-50">An haptic feedback library for VR applications in Unity, featuring automatic feedback generation and customizable patterns.</p>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-	  
-	        <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/parakeet.png" alt="">
@@ -190,6 +173,7 @@
 					<a href="https://github.com/a55mage/Parakeet" target="_blank" class="mx-2">
 					<i class="fab fa-github"></i>
 				</a>Parakeet</h4>
+                <p class="text-white-50 mb-0">2018</p>
                 <p class="mb-0 text-white-50">A BLE GATT client to read the Heart Rate from wearable devices and send the data via TCP.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -197,6 +181,50 @@
           </div>
         </div>
       </div>
+
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/esp32.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">        
+					<a href="https://drive.google.com/open?id=1rZY9EKZydA1kH4Q9p-X_VtGz-5dFYRDi" target="_blank" class="mx-2">
+					<i class="fab fa-youtube"></i>
+				</a>Smart Recycle Bin</h4>
+        <p class="text-white-50 mb-0">2019</p>
+        <p class="mb-0 text-white-50">ESP8266 IoT system for automatic waste labeling powered by Amazon Rekognition API, featuring an interactive backend with garbage log and customizable options. <a href="https://drive.google.com/open?id=1rZY9EKZydA1kH4Q9p-X_VtGz-5dFYRDi" target="_blank">See demo</a></p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/indexcontroller.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">        
+					<a href="https://github.com/a55mage/FeedBucket" target="_blank" class="mx-2">
+					<i class="fab fa-github"></i>
+				</a>FeedBucket</h4>
+                
+                <p class="text-white-50 mb-0">2020</p>
+                <p class="mb-0 text-white-50">An haptic feedback library for VR applications in Unity, featuring automatic feedback generation and customizable patterns.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+	  
 
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
