--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/erCvo-xO7IQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZrY7R4SlW08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Cheater</h4>
             <p class="text-black-50 mb-0">2018</p>
             <p class="text-black-50 mb-0">An action game where you can use cheats like Godmode, Noclip, Wallhack and more.<br>
               Platformer meets bullet hell in a chaotic and frenetic game.</p>
-
+            <a href="https://youtu.be/erCvo-xO7IQ" target="_blank" class="mx-2">
+              <i class="fab fa-youtube"></i>
+            </a>Full gameplay</h4>
           </div>
         </div>
       </div>
