--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="projects" class="projects-section bg-light">
     <div class="container">
 
-      <h3>Bachelor thesis</h3>
+      <h3 class="text-light">Bachelor thesis</h3>
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -85,38 +85,38 @@
 
           </div>
         <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
+          <div class="featured-text text-center text-lg-left text-light">
             <h4>SpellThief</h4>
-            <p class="text-black-50 mb-0">2018</p>
-            <p class="text-black-50 mb-0">A survival horror videogame with Biofeedback integration.<br>The game changes its behaviour when the player's heart rate rises or drops.</p>
+            <p class="text-light-50 mb-0">2018</p>
+            <p class="text-light-50 mb-0">A survival horror videogame with Biofeedback integration.<br>The game changes its behaviour when the player's heart rate rises or drops.</p>
           </div>
         </div>
       </div>
 
-      <h3>Video Game Design & Development Project</h3>
+      <h3 class="text-light">Video Game Design & Development Project</h3>
 
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/ZrY7R4SlW08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
         <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
+          <div class="featured-text text-center text-lg-left text-light">
             <h4>Cheater</h4>
-            <p class="text-black-50 mb-0">2018</p>
-            <p class="text-black-50 mb-0">An action game where you can use cheats like Godmode, Noclip, Wallhack and more.
+            <p class="text-light-50 mb-0">2018</p>
+            <p class="text-light-50 mb-0">An action game where you can use cheats like Godmode, Noclip, Wallhack and more.
               Platformer meets bullet hell in a chaotic and frenetic game.</p>
               <a href="https://a55mage.itch.io/cheater" target="_blank" class="mx-2">
-                <i class="fas fa-gamepad"></i>
-              </a>Donwload and play</h4>
+                <i class="fas fa-gamepad"></i> Download and play
+              </a>
               <br>
             <a href="https://youtu.be/erCvo-xO7IQ" target="_blank" class="mx-2">
-              <i class="fab fa-youtube"></i>
-            </a>Full gameplay</h4>
+              <i class="fab fa-youtube"></i> Full gameplay
+            </a>
           </div>
         </div>
       </div>
 
-      <h3>Fun projects</h3>
+      <h3 class="text-white">Fun projects</h3>
 
       <!-- Project One Row -->
 
@@ -178,7 +178,7 @@
 					<i class="fab fas fa-globe"></i>
 				</a>AirMouse</h4>
         <p class="text-white-50 mb-0">2022</p>
-        <p class="mb-0 text-white-50">A simple script to use your hand and webcam for webpage navigation. <a href="https://a55mage.github.io/AirMouse/" target="_blank">Try it now</a></p>
+        <p class="mb-0 text-white-50">A simple script to use your hand and webcam for webpage navigation.<br> <a href="https://a55mage.github.io/AirMouse/" target="_blank">Try it now</a></p>
         <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -209,7 +209,7 @@
       </div>
 
 
-      <h3>Collaborations</h3>
+      <h3 class="text-white">Collaborations</h3>
 
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
@@ -295,7 +295,7 @@
         </div>
       </div>
 
-      <h3>Other University projects</h3>
+      <h3 class="text-white">Other University projects</h3>
 
       <!-- Project One Row -->
 
