--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Riccardo Macis Portfolio">
   <meta name="author" content="Riccardo Macis">
-  <title>Riccardo Macis | Bauhaus Design</title>
+  <title>Riccardo Macis | Portfolio</title>
 
   <!-- Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -28,9 +28,9 @@
     <div class="header-title-block">
       <img src="img/pfp.jpg" class="profile-img mb-2" alt="Riccardo Macis">
       <h1>Riccardo<br>Macis</h1>
-      <h2>Developer &<br>Designer</h2>
+      <h2>Developer &<br>Consultant</h2>
       <div class="header-subtitle">
-        Web & Mobile @ EY | Game Dev Wannabe<br>
+        Technology Consultant @ EY Studio+ | Game Dev Wannabe<br>
         Based in Cagliari, IT
       </div>
 
